-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u51
-
Component/s: javafx
-
x86_64
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8229462 | jfx11.0.4 | Alexander Matveev | P3 | Closed | Fixed | |
| JDK-8222153 | 8u231 | Alexander Matveev | P3 | Resolved | Fixed | b01 |
| JDK-8223071 | 8u221 | Alexander Matveev | P3 | Resolved | Fixed | b03 |
ADDITIONAL OS VERSION INFORMATION :
Windows 7 64
A DESCRIPTION OF THE PROBLEM :
Hi, I would like to add a comment to JDK-8091277 which may be helpful (or may spawn different ticket).
In addiitonal to high resolution videos, there is also a problem with videos which are NOT high resolution total but are just high resolution vertically. For example a vertical video with 1080x1920 will not play and will produce ERROR_MEDIA_INVALID.
Note this is important issue because vertical full HD video can not be played on standard 1080p screen in portrait mode!
Another suggestion is to improve media layer error messages to save users and developers time. ERROR_MEDIA_INVALID is returned is such broad range of cases, it is just impossible to know what happened without manually analyzing video file or burning time while debugging native source code.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
open 1080x1920 file with MediaPlayer (actually 1080x1100 was sufficient)
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
1080x1920 playing
ACTUAL -
UNKNOWN ERROR_MEDIA_INVALID from mediaPlayer.getError()
[com.sun.media.jfxmediaimpl.platform.gstreamer.GSTMediaPlayer@195bccfc] ERROR_MEDIA_INVALID: ERROR_MEDIA_INVALID
MediaException: UNKNOWN : [com.sun.media.jfxmediaimpl.platform.gstreamer.GSTMediaPlayer@195bccfc] ERROR_MEDIA_INVALID: ERROR_MEDIA_INVALID
at javafx.scene.media.MediaException.getMediaException(MediaException.java:160)
REPRODUCIBILITY :
This bug can be reproduced always.
- backported by
-
JDK-8222153 Full HD video can not be played on standard 1080p screen in portrait mode
-
- Resolved
-
-
JDK-8223071 Full HD video can not be played on standard 1080p screen in portrait mode
-
- Resolved
-
-
JDK-8229462 Full HD video can not be played on standard 1080p screen in portrait mode
-
- Closed
-
- duplicates
-
JDK-8216917 [Win] 1080x1920 mp4 will not play in media player in java fx all versions
-
- Closed
-
- relates to
-
JDK-8222217 FX build fails on 32-bit Windows after fix for JDK-8133841
-
- Resolved
-
-
JDK-8136523 Clarification for JDK-8133841/JDK-8135144
-
- Closed
-
-
JDK-8135144 Comment for JDK-8133841 - not a duplicate
-
- Closed
-
-
JDK-8091277 JavaFx MediaPlayer unable to Play 4K ultra HD (3840 x 2160) video file.
-
- Open
-