8133841: Full HD video can not be played on standard 1080p screen in portrait mode

Reviewed-by: kcr