modules/javafx.media/src/main/native/gstreamer/plugins/dshowwrapper/Sink.h
@@ -48,6 +48,14 @@ struct sOutputFormat
     ULONG length;
     BOOL bForceStereoOutput;
     BOOL bUseExternalAllocator;
+    BOOL bEnableDynamicFormatChanges;
+};
+
+struct sVideoResolutionEvent
+{
+    int width;
+    int height;
+    int offset;
 };
 
 enum SINK_EVENTS
@@ -79,9 +87,11 @@ public:
     HRESULT SetReleaseSampleCallback(void (*function)(GstBuffer *pBuffer, sUserData *pUserData));
     HRESULT SetGetGstBufferCallback(void (*function)(GstBuffer **ppBuffer, long lSize, sUserData *pUserData));
     HRESULT CreateAllocator();
+    HRESULT ReceiveConnection(IPin *pConnector, const AM_MEDIA_TYPE *pmt);
 
 public:
     bool m_bUseExternalAllocator;
+    bool m_bEnableDynamicFormatChanges;
 
 private:
     CAllocator *m_pAlloc;
@@ -130,6 +140,7 @@ private:
 
     bool m_bForceStereoOutput;
     bool m_bUseExternalAllocator;
+    bool m_bEnableDynamicFormatChanges;
 
     bool m_bEOSInProgress;
     bool m_bWorkerThreadExits;
